// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEffect Default - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`useEffect Default - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": undefined,
    "name": "OneUseEffect",
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`useEffect Default with test id - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`useEffect Default with test id - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "data-testid": "test-id",
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": "test-id",
    "name": "OneUseEffect",
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          },
          Object {},
        ],
      ],
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "data-testid": "test-id",
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`useEffect Deps in the component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "deps": Array [
            1,
            Object {
              "property": "some",
            },
            "Text",
            false,
          ],
        },
        Object {},
      ],
      "result": <div>
        Registered with deps
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": undefined,
    "name": "WithDeps",
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [
          1,
          Object {
            "property": "some",
          },
          "Text",
          false,
        ],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "deps": Array [
              1,
              Object {
                "property": "some",
              },
              "Text",
              false,
            ],
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with deps
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`useEffect Unmount registered component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {},
        Object {},
      ],
      "result": <div>
        Registered with unmount
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": undefined,
    "name": "WithUmount",
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": [MockFunction],
            },
          ],
        },
        "deps": Array [],
        "unmount": [MockFunction],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {},
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with unmount
        </div>,
      },
    ],
  },
  "parent": null,
}
`;
